@@ -96,6 +96,7 @@ typedef enum rpmerrCode_e {
     RPMERR_WRITELEAD	= _em(136), /*!< %s: writeLead failed: %s */
     RPMERR_QUERYINFO	= _nm(137), /*!< */
     RPMERR_MANIFEST	= _nm(138), /*!< %s: read manifest failed: %s */
+    RPMERR_BADHEADER	= _em(139), /*!< */
 
     RPMERR_BADSIGTYPE	= _em(200), /*!< Unknown signature type */
     RPMERR_SIGGEN	= _em(201), /*!< Error generating signature */
