@@ -54,6 +54,7 @@
 	- detect and fiddle incompatible mixtures of db3 env/open flags.
 	- add DBI_WRITECURSOR to map to db3 flags with CDB database model.
 	- add rpmdbSetIteratorRewrite to warn of pending lazy (re-)writes.
+	- harden rpmdb iterators from damaged header instance segfaults.
 
 4.0 -> 4.0.[12]
 	- add doxygen and lclint annotations most everywhere.
